feat: Section05 데이터 통신, Section06 동기/비동기 학습 파일 업로드

--- a/class-example/my-app/package.json
+++ b/class-example/my-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "graphql": "^16.11.0",
     "init": "^0.1.2",
     "next": "15.3.5",
     "react": "^19.0.0",
